--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "autoload": {
 		 "psr-4": {
 			 "wwcms\\": "lib/",
+			 "Components\\": "lib/Components/",
 			 "module\\": "app/"
 		 }
     }
