--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "pnicorelli/sharedLab",
     "require": {
 
-      "symfony/http-kernel": "~2.6",
+      "symfony/http-foundation": "~2.6",
       "twig/twig": "~1.0"
     },
     "authors": [
