templating: add navigation-current class

--- a/lib/Components/Menus/menu.yaml
+++ b/lib/Components/Menus/menu.yaml
@@ -1,7 +1,7 @@
 ---
-name: Menus
+name: Mio Menu
 actions:
     - href        : test
-      label       : Menu test
-      class       : nope
-      icon        : 
+      label       : Primo
+      class       : yoooo
+      icon        :
